# zaparoo-launcher

./: .clang-format  .clang-tidy  .cmake-format.yaml  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  .qmlformat.ini  .qmllint.ini  AGENTS.md  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  COPYING  Dockerfile.arm32  Dockerfile.lint  Dockerfile.toolchain  README.md  justfile
.github/: CLA.md  CODEOWNERS  dependabot.yml  pull_request_template.md
.github/contributors/: signatures.json
.github/workflows/: ci.yml  cla.yml  toolchain-build.yml
cmake/: SyncCxxqtQmlModules.cmake  ZaparooCompileOptions.cmake  ZaparooLint.cmake  ZaparooQmlModule.cmake  ZaparooRust.cmake
design/: README.md
design/mocks/Zaparoo/Browse/: CategoriesModel.qml  GamesModel.qml
design/previews/: MainPreview.qml
docs/: architecture.md  building.md  cxx-qt-bridge.md  native-core-poc.md  qml-gotchas.md  quickstart.md  style.md  translations.md
packaging/: deploy-desktop.sh
packaging/mister/: Zaparoo_Launcher_1080p.sh  Zaparoo_Launcher_240p.sh  Zaparoo_Launcher_480p.sh  Zaparoo_Launcher_576p.sh  Zaparoo_Launcher_720p.sh
packaging/qt/: qtquickcontrols2.conf
resources/images/categories/: README.txt
resources/images/systems/: README.txt
rust/: Cargo.toml  deny.toml  rust-toolchain.toml
rust/.cargo/: config.toml
rust/launcher/: Cargo.toml  build.rs
rust/launcher/src/: bind.rs  lib.rs  media_image_cache.rs  mister_runtime.rs
rust/launcher/src/models/: alternate_versions.rs  app_state.rs  app_status.rs  browse.rs  categories.rs  favorites.rs  favorites_state.rs  games.rs  games_state.rs  hub_state.rs  input.rs  media_status.rs  mod.rs  model_includes.h  platform.rs  qr_code.rs  recents.rs  recents_state.rs  runtime.rs  settings.rs  system_status.rs  systems.rs  update_all_runner.rs
rust/mock-core/: Cargo.toml
rust/mock-core/src/: fixtures.rs  handler.rs  main.rs
rust/zaparoo-core/: Cargo.toml
rust/zaparoo-core/src/: client.rs  config.rs  input_actions.rs  lib.rs  logger.rs  media_types.rs  persist.rs  platform.rs  platform_paths.rs  remote_resource.rs  runtime.rs  systems_catalog.rs
rust/zaparoo-core/src/endpoints/: catalog.rs  media_browse.rs  media_favorites.rs  media_history.rs  media_search.rs  media_tags_update.rs  mod.rs  run.rs
rust/zaparoo-core/src/endpoints/snapshots/: zaparoo_core__endpoints__catalog__tests__shape_catalog_snapshot_matches_fixture.snap
rust/zaparoo-core/src/store/: endpoint.rs  media_status.rs  mod.rs  mutation.rs  tag.rs
scripts/: build-arm32.sh  build-toolchain.sh  deploy-mister.sh  run-dev.sh  run-macos-mister-core.sh
src/LICENSES/: AtkinsonHyperlegible-ATTRIBUTION.txt  Iconoir-ATTRIBUTION.txt  Lucide-ATTRIBUTION.txt  OFL.txt  PressStart2P-ATTRIBUTION.txt  Qt-LGPL-NOTICE.txt  Streamline-ATTRIBUTION.txt  console-logos-ATTRIBUTION.txt  controller-icons-ATTRIBUTION.txt
src/app/: CMakeLists.txt  MiSterRuntime.cpp  MiSterRuntime.h  main.cpp  main_rs.cpp  media_image_provider.cpp  media_image_provider.h  native_video_writer.cpp  native_video_writer.h
src/core/: BrowseModel.cpp  CMakeLists.txt  CategoriesModel.cpp  CategoriesModel.h  Config.cpp  Config.h  GamesModel.cpp  GamesModel.h  Logger.cpp  Logger.h  MediaTypes.h  PlatformPaths.cpp  PlatformPaths.h  SystemsCatalog.cpp  SystemsCatalog.h  SystemsModel.cpp  SystemsModel.h  ZaparooClient.cpp  ZaparooClient.h
src/ui/app/: CMakeLists.txt  Main.qml  MainLayout.qml
src/ui/components/: ActiveLabel.qml  BootOverlay.qml  BrowseDetailPane.qml  BrowseList.qml  CMakeLists.txt  Carousel.qml  CommercialNoticeModal.qml  ContextMenu.qml  CoreStatusPill.qml  CoverDelegate.qml  CrtOverlay.qml  FirstRunIndexModal.qml  FpsCounter.qml  HeaderBar.qml  HubCategoryTile.qml  ListPickerModal.qml  LoadingIndicator.qml  LogUploadModal.qml  MenuBar.qml  Modal.qml  PagedGrid.qml  PaginationStatus.qml  QrCodeModal.qml  ScreenStateOverlay.qml  ScreensaverOverlay.qml  SelectionDots.qml  SettingsField.qml  SettingsSectionHeader.qml  Starfield.qml  StatusIcon.qml  TextTileDelegate.qml  Tile.qml  TileLoader.qml  TopStatusStrip.qml  UpdateAllModal.qml
src/ui/screens/: AboutScreen.qml  CMakeLists.txt  FavoritesScreen.qml  GameDetailsScreen.qml  GamesScreen.qml  HubScreen.qml  RecentsScreen.qml  ScreenManager.qml  SettingsScreen.qml  SystemsScreen.qml
src/ui/theme/: BrowseLayouts.qml  CMakeLists.txt  Resources.qml  Sizing.qml  Theme.qml
src/ui/translations/: launcher_ar.ts  launcher_de.ts  launcher_el.ts  launcher_en.ts  launcher_es.ts  launcher_he.ts  launcher_hi.ts  launcher_it.ts  launcher_ja.ts  launcher_ko.ts  launcher_nl.ts  launcher_nl_NL.ts  launcher_ro.ts  launcher_ro_RO.ts  launcher_sk.ts  launcher_sk_SK.ts  launcher_uk.ts  launcher_zh_CN.ts
tests/: CMakeLists.txt
tests/core/: CMakeLists.txt  MockServer.cpp  MockServer.h  tst_browse_model.cpp  tst_config.cpp  tst_games_model.cpp  tst_systems_catalog.cpp  tst_systems_model.cpp  tst_zaparoo_client.cpp
tests/ui/: CMakeLists.txt  tst_browse_layout_profiles.qml  tst_list_picker_modal.qml  tst_main.cpp  tst_navigation.qml  tst_paged_grid.qml  tst_persistence.qml  tst_sizing.qml  tst_smoke.qml
tests/ui_smoke/: CMakeLists.txt  tst_main.cpp  tst_smoke.qml
toolchain/: VERSION
